--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "c8e4846d",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "b707478a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4     A       0    0.00                1                2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "2dc8e5ad",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
    "id": "125524c9",
    "metadata": {},
    "source": [
-    "### Modelo Matemático"
+    "### Modelo Paramétrico"
    ]
   },
   {
@@ -223,13 +223,13 @@
    "id": "b1bda74f",
    "metadata": {},
    "source": [
-    "<img src=\"img/e1.jpeg\" width=\"500\">\n",
-    "<img src=\"img/e2.jpeg\" width=\"500\">"
+    "<img src=\"img/e1a.jpeg\" width=\"500\">\n",
+    "<img src=\"img/e1b.jpeg\" width=\"500\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "986dd0e6",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "8c0c6033",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "bb6038dc",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "705a4f22",
    "metadata": {},
    "outputs": [
@@ -328,6 +328,143 @@
     "- A interpretação correta é: Se repetíssemos esse mesmo processo de amostragem e construção de intervalo muitas vezes, em **95% dos casos** os intervalos obtidos conteriam o verdadeiro valor de \\(p\\).\n",
     "\n",
     "- Portanto, com base nessa confiança no processo, podemos selecionar **este único intervalo** e afirmar com **95% de confiança** que o verdadeiro valor de \\(p\\) está entre **51% e 62%**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f162a05",
+   "metadata": {},
+   "source": [
+    "## 2. Podemos afirmar que a taxa de conversão dos clientes é superior que 50% ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20c4531e",
+   "metadata": {},
+   "source": [
+    "**Hipóteses do Teste**\n",
+    "\n",
+    "- **H₀ (Hipótese nula):** A taxa de conversão na população **não é superior a 50%**. O valor observado pode ser explicado apenas pela variabilidade amostral (acaso na seleção da amostra).\n",
+    "- **H₁ (Hipótese alternativa):** A taxa de conversão na população **é superior a 50%**.\n",
+    "\n",
+    "**Notação formal:**\n",
+    "\n",
+    "- H₀: p = po | (po = 50%)\n",
+    "- H₁: p > po\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a723c9",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ceb817b",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e2.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5ab47d11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nível de significância do teste\n",
+    "alpha = .05\n",
+    "print(f\"alpha = {np.round(alpha, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d2c5deaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p0 = 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distribuição sob H0\n",
+    "po = .5\n",
+    "print(f\"p0 = {np.round(po, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fb1dc2e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z_obs = 2.31\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Padronizando o valor observado\n",
+    "Z_obs = (p_obs - po)/np.sqrt(po*(1-po)/n)\n",
+    "print(f\"Z_obs = {np.round(Z_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "573085da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcular valor-p para teste unicaudal à direita (Ha: p > p0)\n",
+    "p_value = 1 - norm.cdf(Z_obs)\n",
+    "\n",
+    "# Decisão\n",
+    "if p_value < alpha:\n",
+    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "else:\n",
+    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "160e17f3",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Ao nível de significância de 5% (probabilidade de rejeitar incorretamente a hipótese nula), temos evidência suficiente para rejeitar H₀ em favor de H₁.  \n",
+    "Com isso, concluímos que a taxa de conversão dos clientes é **superior a 50%**.\n"
    ]
   }
  ],
