--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "c8e4846d",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "b707478a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4     A       0    0.00                1                2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "2dc8e5ad",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "986dd0e6",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "8c0c6033",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "bb6038dc",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "705a4f22",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
    "id": "5f162a05",
    "metadata": {},
    "source": [
-    "## 2. Podemos afirmar que a taxa de conversão dos clientes é superior que 50% ?"
+    "## 2. Podemos afirmar que a taxa de conversão dos clientes é superior que 50%?"
    ]
   },
   {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "5ab47d11",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "d2c5deaa",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "fb1dc2e1",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "573085da",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
     }
    ],
    "source": [
-    "# Calcular valor-p para teste unicaudal à direita (Ha: p > p0)\n",
+    "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
     "p_value = 1 - norm.cdf(Z_obs)\n",
     "\n",
     "# Decisão\n",
@@ -465,6 +465,224 @@
     "\n",
     "- Ao nível de significância de 5% (probabilidade de rejeitar incorretamente a hipótese nula), temos evidência suficiente para rejeitar H₀ em favor de H₁.  \n",
     "Com isso, concluímos que a taxa de conversão dos clientes é **superior a 50%**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12d93445",
+   "metadata": {},
+   "source": [
+    "## 3. Construa um intervalo de confiança de 95% para estimar a diferença na taxa de conversão entre os grupos B e D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc012b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nB = 75\n",
+      "pB_obs = 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grupo B: Teve cupom de desconto\n",
+    "\n",
+    "# Variável observada\n",
+    "XB = base.loc[(base[\"grupo\"] == \"B\"), \"evento\"].values\n",
+    "\n",
+    "# Tamanho da amostra\n",
+    "nB = XB.shape[0]\n",
+    "\n",
+    "# Proporção amostral observada\n",
+    "pB_obs = XB.mean()\n",
+    "\n",
+    "print(f\"nB = {nB}\")\n",
+    "print(f\"pB_obs = {np.round(pB_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "18eb3d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nD = 75\n",
+      "pD_obs = 0.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grupo D: Teve cashback\n",
+    "\n",
+    "# Variável observada\n",
+    "XD = base.loc[(base[\"grupo\"] == \"D\"), \"evento\"].values\n",
+    "\n",
+    "# Tamanho da amostra\n",
+    "nD = XD.shape[0]\n",
+    "\n",
+    "# Proporção amostral observada\n",
+    "pD_obs = XD.mean()\n",
+    "\n",
+    "print(f\"nD = {nD}\")\n",
+    "print(f\"pD_obs = {np.round(pD_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b789fa58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diff_B_D_obs = 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Diferença observada\n",
+    "diff_B_D_obs = pB_obs - pD_obs\n",
+    "print(f\"diff_B_D_obs = {np.round(diff_B_D_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917907fd",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6b7a13fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Melhor estimativa para pB\n",
+    "pB = pB_obs\n",
+    "\n",
+    "# Validação de aproximação pela normal\n",
+    "print((nB*pB >= 10) & (nB*(1-pB) >= 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "10d2303d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Melhor estimativa para pD\n",
+    "pD = pD_obs\n",
+    "\n",
+    "# Validação de aproximação pela normal\n",
+    "print((nD*pD >= 10) & (nD*(1-pD) >= 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "30cdb04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SE = 0.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Erro Padrão\n",
+    "SE = np.sqrt(pB*(1-pB)/nB + pD*(1-pD)/nD)\n",
+    "print(f\"SE = {np.round(SE, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d2c5e33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zc = 1.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtenção do Zc\n",
+    "gama = .95\n",
+    "q    = (1- gama)/2 + gama\n",
+    "Zc   = norm.ppf(q=q)\n",
+    "print(f\"Zc = {np.round(Zc, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1d73023b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IC = [-0.14, 0.17]\n",
+      "IC = 0.01 +- 1.96 * 0.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intervalo de confiança\n",
+    "d0 = diff_B_D_obs - Zc*SE\n",
+    "d1 = diff_B_D_obs + Zc*SE\n",
+    "print(f\"IC = [{np.round(d0, 2)}, {np.round(d1, 2)}]\")\n",
+    "print(f\"IC = {np.round(diff_B_D_obs, 2)} +- {np.round(Zc, 2)} * {np.round(SE, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67a7fd36",
+   "metadata": {},
+   "source": [
+    "## Conclusão\n",
+    "\n",
+    "- Com **95% de confiança**, estimamos que a diferença populacional nas taxas de conversão entre os grupos B e D (pB - pD) esteja entre **-14 p.p. e 17 p.p.**\n",
+    "- Em outras palavras, acreditamos que a taxa de conversão do grupo B pode ser até 14 pontos percentuais **menor** ou até 17 pontos percentuais **maior** do que a do grupo D."
    ]
   }
  ],
