--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -414,6 +414,25 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "529b5f87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validação de aproximação pela normal\n",
+    "print((n*p0 >= 10) & (n*(1-p0) >= 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "fb1dc2e1",
    "metadata": {},
    "outputs": [
@@ -433,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "573085da",
    "metadata": {},
    "outputs": [
@@ -477,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cc012b94",
    "metadata": {},
    "outputs": [
@@ -508,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "18eb3d46",
    "metadata": {},
    "outputs": [
@@ -539,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b789fa58",
    "metadata": {},
    "outputs": [
@@ -567,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6b7a13fa",
    "metadata": {},
    "outputs": [
@@ -589,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "10d2303d",
    "metadata": {},
    "outputs": [
@@ -611,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "30cdb04e",
    "metadata": {},
    "outputs": [
@@ -631,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8d2c5e33",
    "metadata": {},
    "outputs": [
@@ -653,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1d73023b",
    "metadata": {},
    "outputs": [
@@ -683,6 +702,168 @@
     "\n",
     "- Com **95% de confiança**, estimamos que a diferença populacional nas taxas de conversão entre os grupos B e D (pB - pD) esteja entre **-14 p.p. e 17 p.p.**\n",
     "- Em outras palavras, acreditamos que a taxa de conversão do grupo B pode ser até 14 pontos percentuais **menor** ou até 17 pontos percentuais **maior** do que a do grupo D."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f9ce09",
+   "metadata": {},
+   "source": [
+    "## 4. Podemos concluir que a taxa de conversão nos grupos B e D são diferentes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec113e1",
+   "metadata": {},
+   "source": [
+    "O resultado apresentado no item 3 já responde à pergunta: com **95% de confiança**, estimamos que a diferença populacional nas taxas de conversão entre os grupos B e D (pB - pD) esteja entre **-14 p.p. e 17 p.p.**\n",
+    "\n",
+    "Como esse intervalo inclui o valor **0**, **não temos evidência estatística suficiente** para concluir que existe uma diferença significativa entre as taxas de conversão dos dois grupos, ao nível de significância de 5%.\n",
+    "\n",
+    "Além disso, a realização de um **teste de hipótese** formal para a diferença entre proporções levaria à **mesma conclusão**, reforçando que não há evidência de diferença estatisticamente significativa — o que faremos na sequência."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c36325",
+   "metadata": {},
+   "source": [
+    "**Hipóteses do Teste**\n",
+    "\n",
+    "- **H₀ (Hipótese nula):** Não há diferença na taxa de conversão entre os grupos B e D. A diferença observada pode ser atribuída à variabilidade amostral (isto é, ao acaso na seleção da amostra).\n",
+    "- **H₁ (Hipótese alternativa):** Existe uma diferença real entre as taxas de conversão dos grupos B e D.\n",
+    "\n",
+    "**Notação formal:**\n",
+    "\n",
+    "- H₀: pB - pD = do | (do = 0)\n",
+    "- H₁: pB - pD != do\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ead43f3e",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "701545ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nível de significância do teste\n",
+    "alpha = .05\n",
+    "print(f\"alpha = {np.round(alpha, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bd8d1047",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p0 = 0.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distribuição sob H0\n",
+    "po = (nB * pB_obs + nD * pD_obs) / (nB + nD)\n",
+    "print(f\"p0 = {np.round(po, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1f0c5eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validação de aproximação pela normal\n",
+    "print((nB*p0 >= 10) & (nB*(1-p0) >= 10))\n",
+    "print((nD*p0 >= 10) & (nD*(1-p0) >= 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a8c343b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z_obs = 0.17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Padronizando o valor observado\n",
+    "Z_obs = (pB_obs - pD_obs)/np.sqrt((po*(1-po)/nB) + (po*(1-po)/nD)) \n",
+    "print(f\"Z_obs = {np.round(Z_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c77df5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-valor = 0.87 ≥ α = 0.05 → Não rejeitamos H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
+    "p_value = norm.cdf(-Z_obs) + (1 - norm.cdf(Z_obs))\n",
+    "\n",
+    "# Decisão\n",
+    "if p_value < alpha:\n",
+    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "else:\n",
+    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8da4431f",
+   "metadata": {},
+   "source": [
+    "## Conclusão\n",
+    "\n",
+    "- Ao nível de significância de 5%, não encontramos evidência estatística suficiente para rejeitar H₀ em favor de H₁.  \n",
+    "Com isso, não podemos concluir que exista diferença significativa nas taxas de conversão entre os grupos B e D."
    ]
   }
  ],
