--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -71,7 +71,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import norm, t, f"
+    "from scipy.stats import norm, t, f, chi2"
    ]
   },
   {
@@ -585,6 +585,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e080b4ac",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e3a.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c12fc3",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e3b.jpeg\" width=\"500\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "6b7a13fa",
@@ -698,7 +714,7 @@
    "id": "67a7fd36",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
+    "**Conclusão**\n",
     "\n",
     "- Com **95% de confiança**, estimamos que a diferença populacional nas taxas de conversão entre os grupos B e D (pB - pD) esteja entre **-14 p.p. e 17 p.p.**\n",
     "- Em outras palavras, acreditamos que a taxa de conversão do grupo B pode ser até 14 pontos percentuais **menor** ou até 17 pontos percentuais **maior** do que a do grupo D."
@@ -747,6 +763,14 @@
    "metadata": {},
    "source": [
     "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee868616",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e4.jpeg\" width=\"500\">"
    ]
   },
   {
@@ -860,10 +884,525 @@
    "id": "8da4431f",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
+    "**Conclusão**\n",
     "\n",
     "- Ao nível de significância de 5%, não encontramos evidência estatística suficiente para rejeitar H₀ em favor de H₁.  \n",
     "Com isso, não podemos concluir que exista diferença significativa nas taxas de conversão entre os grupos B e D."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdc74572",
+   "metadata": {},
+   "source": [
+    "## 5. A taxa de conversão (`evento`) está associada ao tipo de campanha (`grupo`)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1169cfdc",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da81b6d2",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e5a.jpeg\" width=\"500\">\n",
+    "<img src=\"img/e5b.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f240d4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>row_0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>28</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>33</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>29</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0   0   1\n",
+       "row_0        \n",
+       "A      40  35\n",
+       "B      28  47\n",
+       "C      33  42\n",
+       "D      29  46"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Resultado Observado\n",
+    "X = base[\"evento\"].values\n",
+    "Y = base[\"grupo\"].values\n",
+    "\n",
+    "obs = pd.crosstab(Y, X)\n",
+    "obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5db91664",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32.5</td>\n",
+       "      <td>42.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32.5</td>\n",
+       "      <td>42.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32.5</td>\n",
+       "      <td>42.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32.5</td>\n",
+       "      <td>42.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1\n",
+       "0  32.5  42.5\n",
+       "1  32.5  42.5\n",
+       "2  32.5  42.5\n",
+       "3  32.5  42.5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Resultado Esperado se X e Y não possuem relação\n",
+    "\n",
+    "# Fração 0's e 1's geral\n",
+    "frac = (obs.sum()/obs.sum().sum()).values.reshape(1,2)\n",
+    "\n",
+    "# Soma por linha\n",
+    "sum_by_row = obs.sum(axis=1).values.reshape(4,1)\n",
+    "\n",
+    "# Esperado\n",
+    "exp = pd.DataFrame(np.matmul(sum_by_row, frac))\n",
+    "exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f251ac21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X2_obs = 4.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X2 observado\n",
+    "obs = obs.values \n",
+    "exp = exp.values\n",
+    "X2_obs = (((obs - exp)**2)/exp).sum()\n",
+    "print(f\"X2_obs = {np.round(X2_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415241cd",
+   "metadata": {},
+   "source": [
+    "**Hipóteses do Teste (Qui-quadrado de independência)**\n",
+    "\n",
+    "- **H₀ (Hipótese nula):** Não há associação entre a taxa de conversão e o tipo de campanha. A diferença observada pode ser explicada apenas pela variabilidade amostral (isto é, pelo acaso).\n",
+    "- **H₁ (Hipótese alternativa):** Existe uma associação entre a taxa de conversão e o tipo de campanha.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4a2b5137",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df = 3\n",
+      "p-valor = 0.18 ≥ α = 0.05 → Não rejeitamos H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construção da distribuição sob H0: Como as premissas abaixo são satisfeitas, podemos avaliar qual a probabilidade do acaso \n",
+    "# produzir um valor tão extremo quanto X2_obs em uma distribuição Qui Quadrado (variáveis sem relação)\n",
+    "# a. As observações são independentes\n",
+    "# b. Supondo que não haja relação entre as variáveis\n",
+    "# c. Pelo menos 80% das células da tabela esperada possuem valores >= 5\n",
+    "# d. Nenhuma célula com valor esperado < 1\n",
+    "\n",
+    "# Graus de liberdade\n",
+    "r = obs.shape[0]\n",
+    "c = obs.shape[1]\n",
+    "df = (r - 1) * (c - 1)\n",
+    "print(f\"df = {np.round(df, 2)}\")\n",
+    "\n",
+    "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
+    "# P(X2 >= X2_obs)\n",
+    "p_value = 1 - chi2.cdf(X2_obs, df)\n",
+    "\n",
+    "# Decisão\n",
+    "if p_value < alpha:\n",
+    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "else:\n",
+    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f617324",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Ao nível de significância de 5%, **não encontramos evidência estatística suficiente para rejeitar H₀ em favor de H₁**.  \n",
+    "Dessa forma, **não há evidência de associação entre a ocorrência do evento (ex: conversão) e o tipo de campanha aplicada**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06485055",
+   "metadata": {},
+   "source": [
+    "## 6. Construa um intervalo de confiança de 95% para estimar o valor médio de compra (`score`) de todos os clientes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1b7a3e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 170\n",
+      "x_obs = 77.16\n",
+      "s = 13.52\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variável observada: Somente clientes que realizaram alguma compra\n",
+    "X = base.loc[base[\"evento\"] == 1, \"score\"].values\n",
+    "\n",
+    "# Tamanho da amostra\n",
+    "n = X.shape[0]\n",
+    "\n",
+    "# Média amostral observada\n",
+    "x_obs = X.mean()\n",
+    "\n",
+    "# Desvio padrão amostral\n",
+    "s = X.std(ddof=1)\n",
+    "\n",
+    "print(f\"n = {n}\")\n",
+    "print(f\"x_obs = {np.round(x_obs, 2)}\")\n",
+    "print(f\"s = {np.round(s, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a1ba46",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df064de",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e6a.jpeg\" width=\"500\">\n",
+    "<img src=\"img/e6b.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "18fea7fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SE = 1.04\n",
+      "tc = 1.97\n",
+      "IC = [75.11, 79.21]\n",
+      "IC = 77.16 +- 1.97 * 1.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da média amostral por uma normal.\n",
+    "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
+    "# Isso introduz variabilidade adicional na estatística de teste, razão pela qual usamos a distribuição t de Student em vez da normal padrão.\n",
+    "\n",
+    "# Erro Padrão\n",
+    "SE = np.sqrt((s**2)/n)\n",
+    "print(f\"SE = {np.round(SE, 2)}\")\n",
+    "\n",
+    "# Obtenção do tc\n",
+    "gama = .95\n",
+    "q    = (1- gama)/2 + gama\n",
+    "df   = n -1\n",
+    "tc   = t.ppf(df = df, q=q)\n",
+    "print(f\"tc = {np.round(tc, 2)}\")\n",
+    "\n",
+    "# Intervalo de confiança\n",
+    "x0 = x_obs - tc*SE\n",
+    "x1 = x_obs + tc*SE\n",
+    "print(f\"IC = [{np.round(x0, 2)}, {np.round(x1, 2)}]\")\n",
+    "print(f\"IC = {np.round(x_obs, 2)} +- {np.round(tc, 2)} * {np.round(SE, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b040ecc",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Temos **95% de confiança** de que o verdadeiro valor do score populacional u está entre **75,11 e 79,21**.  \n",
+    "Em outras palavras, acreditamos que o **valor médio de compra da população** se encontra nesse intervalo com 95% de confiança.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91f2017",
+   "metadata": {},
+   "source": [
+    "## 7. O valor médio de compra (`score`) de todos os clientes é maior que R$ 70?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b857f5f",
+   "metadata": {},
+   "source": [
+    "**Hipóteses do Teste**\n",
+    "\n",
+    "- **H₀ (Hipótese nula):** O valor médio de compra **não é maior que 70 reais**. A média observada pode ser explicada apenas pela variabilidade amostral (isto é, pelo acaso na seleção da amostra).\n",
+    "- **H₁ (Hipótese alternativa):** O valor médio de compra **é maior que 70 reais**.\n",
+    "\n",
+    "**Notação formal:**\n",
+    "\n",
+    "- H₀: u = uo | (uo = 70)\n",
+    "- H₁: u > uo\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4715bdb",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "273084c9",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e7.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "00b623c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nível de significância do teste\n",
+    "alpha = .05\n",
+    "print(f\"alpha = {np.round(alpha, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e088d5e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uo = 70\n",
+      "SE = 1.04\n",
+      "t_obs = 6.9\n",
+      "p-valor = 0.00 < α = 0.05 → Rejeitamos H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distribuição sob H0\n",
+    "# - Supondo uma população com uo = 70\n",
+    "# - Com variância estimada igual a variancia amostral\n",
+    "\n",
+    "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da média amostral por uma normal.\n",
+    "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
+    "# Isso introduz variabilidade adicional na estatística de teste, razão pela qual usamos a distribuição t de Student em vez da normal padrão.\n",
+    "\n",
+    "# u0\n",
+    "uo = 70\n",
+    "print(f\"uo = {np.round(uo, 2)}\")\n",
+    "\n",
+    "# Erro Padrão\n",
+    "SE = np.sqrt((s**2)/n)\n",
+    "print(f\"SE = {np.round(SE, 2)}\")\n",
+    "\n",
+    "# Obtenção do t_obs\n",
+    "t_obs = (x_obs - uo)/SE\n",
+    "print(f\"t_obs = {np.round(t_obs, 2)}\")\n",
+    "\n",
+    "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
+    "# P(t >= t_obs)\n",
+    "p_value = 1 - t.cdf(t_obs, df)\n",
+    "\n",
+    "# Decisão\n",
+    "if p_value < alpha:\n",
+    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "else:\n",
+    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e919968e",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Ao nível de significância de 5% — ou seja, assumindo um risco de 5% de rejeitar incorretamente a hipótese nula —, encontramos **evidência estatística suficiente para rejeitar H₀ em favor de H₁**.  \n",
+    "Dessa forma, **concluímos que o valor médio de compra é superior a 70 reais**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dbdd289",
+   "metadata": {},
+   "source": [
+    "## 8. Construa um intervalo de confiança de 95% para estimar a diferença no valor médio de compra entre os grupos D e B."
    ]
   }
  ],
