--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -1402,7 +1402,288 @@
    "id": "9dbdd289",
    "metadata": {},
    "source": [
-    "## 8. Construa um intervalo de confiança de 95% para estimar a diferença no valor médio de compra entre os grupos D e B."
+    "## 8. Construa um intervalo de confiança de 95% para estimar a diferença no valor médio de compra entre os grupos B e D."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd93354d",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af27b076",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e8a.jpeg\" width=\"500\">\n",
+    "<img src=\"img/e8b.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ce5793cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nB = 47\n",
+      "xB_obs = 76.52\n",
+      "sB = 11.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grupo B: Teve cupom de desconto\n",
+    "\n",
+    "# Variável observada: Somente clientes que realizaram alguma compra\n",
+    "XB = base.loc[(base[\"evento\"] == 1) & (base[\"grupo\"] == \"B\"), \"score\"].values\n",
+    "\n",
+    "# Tamanho da amostra\n",
+    "nB = XB.shape[0]\n",
+    "\n",
+    "# Média amostral observada\n",
+    "xB_obs = XB.mean()\n",
+    "\n",
+    "# Desvio padrão amostral\n",
+    "sB = XB.std(ddof=1)\n",
+    "\n",
+    "print(f\"nB = {nB}\")\n",
+    "print(f\"xB_obs = {np.round(xB_obs, 2)}\")\n",
+    "print(f\"sB = {np.round(sB, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1d588609",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nD = 46\n",
+      "xD_obs = 0.61\n",
+      "sD = 11.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grupo D: Teve cupom de desconto\n",
+    "\n",
+    "# Variável observada: Somente clientes que realizaram alguma compra\n",
+    "XD = base.loc[(base[\"evento\"] == 1) & (base[\"grupo\"] == \"D\"), \"score\"].values\n",
+    "\n",
+    "# Tamanho da amostra\n",
+    "nD = XD.shape[0]\n",
+    "\n",
+    "# Média amostral observada\n",
+    "xD_obs = XD.mean()\n",
+    "\n",
+    "# Desvio padrão amostral\n",
+    "sD = XD.std(ddof=1)\n",
+    "\n",
+    "print(f\"nD = {nD}\")\n",
+    "print(f\"xD_obs = {np.round(pD_obs, 2)}\")\n",
+    "print(f\"sD = {np.round(sD, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "60c86dd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diff_B_D_obs = -6.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Diferença observada\n",
+    "diff_B_D_obs = xB_obs - xD_obs\n",
+    "print(f\"diff_B_D_obs = {np.round(diff_B_D_obs, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "dd6aa94b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SE = 2.41\n",
+      "tc = 1.99\n",
+      "IC = [-11.56, -2.0]\n",
+      "IC = -6.78 +- 1.99 * 2.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da média amostral por uma normal.\n",
+    "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
+    "# Isso introduz variabilidade adicional na estatística de teste, razão pela qual usamos a distribuição t de Student em vez da normal padrão.\n",
+    "\n",
+    "# Erro Padrão\n",
+    "SE = np.sqrt((sB**2)/nB + (sD**2)/nD)\n",
+    "print(f\"SE = {np.round(SE, 2)}\")\n",
+    "\n",
+    "# Obtenção do tc\n",
+    "gama = .95\n",
+    "q    = (1- gama)/2 + gama\n",
+    "df   = (((sB**2)/nB + (sD**2)/nD)**2)/((((sB**2)/nB)**2)/(nB - 1) + (((sD**2)/nD)**2)/(nD - 1))\n",
+    "tc   = t.ppf(df = df, q=q)\n",
+    "print(f\"tc = {np.round(tc, 2)}\")\n",
+    "\n",
+    "# Intervalo de confiança\n",
+    "d0 = diff_B_D_obs - tc*SE\n",
+    "d1 = diff_B_D_obs + tc*SE\n",
+    "print(f\"IC = [{np.round(d0, 2)}, {np.round(d1, 2)}]\")\n",
+    "print(f\"IC = {np.round(diff_B_D_obs, 2)} +- {np.round(tc, 2)} * {np.round(SE, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cba44e5",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Com **95% de confiança**, estimamos que a **diferença média no valor de compra entre os grupos B e D** está entre **−11,56 e −2,00**.\n",
+    "- Em outras palavras, acreditamos que os clientes do grupo B gastam, em média, entre **2 e 11,56 unidades a menos** do que os do grupo D.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1feb93da",
+   "metadata": {},
+   "source": [
+    "## 9. Podemos afirmar que o grupo D gerou um valor médio de compra diferente do que o grupo B?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b07a823",
+   "metadata": {},
+   "source": [
+    "**Hipóteses do Teste**\n",
+    "\n",
+    "- **H₀ (Hipótese nula):** Não há diferença no valor médio de compra entre os grupos B e D. Qualquer diferença observada pode ser explicada apenas pela variabilidade amostral (isto é, pelo acaso na seleção da amostra).\n",
+    "- **H₁ (Hipótese alternativa):** Há diferença no valor médio de compra entre os grupos B e D.\n",
+    "\n",
+    "**Notação formal:**\n",
+    "\n",
+    "- H₀: uB - uD = do | (do = 0)\n",
+    "- H₁: uB - uD != do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "360356a7",
+   "metadata": {},
+   "source": [
+    "### Modelo Paramétrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8088909",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/e9.jpeg\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e7ae8426",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nível de significância do teste\n",
+    "alpha = .05\n",
+    "print(f\"alpha = {np.round(alpha, 2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1682c9ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "do = 0\n",
+      "SE = 2.41\n",
+      "t_obs = -2.82\n",
+      "p-valor = 0.01 < α = 0.05 → Rejeitamos H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distribuição sob H0\n",
+    "# - Supondo uma população com uB - uD = do = 0\n",
+    "# - Com variância estimada sB**2/nB + sD**2/nD\n",
+    "\n",
+    "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da diferença da média amostral por uma normal.\n",
+    "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
+    "# Isso introduz variabilidade adicional na estatística de teste, razão pela qual usamos a distribuição t de Student em vez da normal padrão.\n",
+    "\n",
+    "# do\n",
+    "do = 0\n",
+    "print(f\"do = {np.round(do, 2)}\")\n",
+    "\n",
+    "# Erro Padrão\n",
+    "SE = np.sqrt((sB**2)/nB + (sD**2)/nD)\n",
+    "print(f\"SE = {np.round(SE, 2)}\")\n",
+    "\n",
+    "# Obtenção do t_obs\n",
+    "t_obs = diff_B_D_obs/SE\n",
+    "print(f\"t_obs = {np.round(t_obs, 2)}\")\n",
+    "\n",
+    "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
+    "# P(t >= t_obs)\n",
+    "df      = (((sB**2)/nB + (sD**2)/nD)**2)/((((sB**2)/nB)**2)/(nB - 1) + (((sD**2)/nD)**2)/(nD - 1))\n",
+    "p_value = t.cdf(t_obs, df)*2\n",
+    "\n",
+    "# Decisão\n",
+    "if p_value < alpha:\n",
+    "    print(f\"p-valor = {p_value:.2f} < α = {alpha} → Rejeitamos H0\")\n",
+    "else:\n",
+    "    print(f\"p-valor = {p_value:.2f} ≥ α = {alpha} → Não rejeitamos H0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127f1d7e",
+   "metadata": {},
+   "source": [
+    "**Conclusão**\n",
+    "\n",
+    "- Ao nível de significância de 5% — ou seja, assumindo um risco de 5% de rejeitar incorretamente a hipótese nula —, encontramos **evidência estatística suficiente para rejeitar H₀ em favor de H₁**.  \n",
+    "- Dessa forma, **concluímos que há diferença significativa no valor médio de compra entre os grupos B e D**."
    ]
   }
  ],
