--- a/inferencia.ipynb
+++ b/inferencia.ipynb
@@ -1004,7 +1004,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [-0.147, 0.16]\n"
+      "IC = [-0.147, 0.173]\n"
      ]
     }
    ],
@@ -1279,7 +1279,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>B</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1314,7 +1314,7 @@
        "    <tr>\n",
        "      <th>146</th>\n",
        "      <td>D</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>147</th>\n",
@@ -1324,7 +1324,7 @@
        "    <tr>\n",
        "      <th>148</th>\n",
        "      <td>D</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
@@ -1338,16 +1338,16 @@
       ],
       "text/plain": [
        "     X  Y\n",
-       "0    B  1\n",
+       "0    B  0\n",
        "1    B  1\n",
        "2    B  1\n",
        "3    B  1\n",
        "4    B  1\n",
        "..  .. ..\n",
        "145  D  1\n",
-       "146  D  1\n",
+       "146  D  0\n",
        "147  D  1\n",
-       "148  D  0\n",
+       "148  D  1\n",
        "149  D  1\n",
        "\n",
        "[150 rows x 2 columns]"
@@ -1800,7 +1800,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1887"
+       "np.float64(0.1894)"
       ]
      },
      "execution_count": 47,
@@ -1997,7 +1997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [75.11, 79.19]\n"
+      "IC = [75.13, 79.16]\n"
      ]
     }
    ],
@@ -2089,7 +2089,6 @@
    "source": [
     "# Distribuição sob H0\n",
     "# - Supondo uma população com uo = 70\n",
-    "# - Com variância estimada igual a variancia amostral\n",
     "\n",
     "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da média amostral por uma normal.\n",
     "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
@@ -2421,7 +2420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SE = 2.4\n"
+      "SE = 2.39\n"
      ]
     }
    ],
@@ -2441,7 +2440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IC = [-11.471, -2.109]\n"
+      "IC = [-11.5, -2.104]\n"
      ]
     }
    ],
@@ -2822,7 +2821,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uo = 0\n",
+      "do = 0\n",
       "SE = 0.07\n",
       "t_obs = 19.95\n",
       "p-valor = 0.00 < α = 0.05 → Rejeitamos H0\n"
@@ -2831,23 +2830,22 @@
    ],
    "source": [
     "# Distribuição sob H0\n",
-    "# - Supondo uma população com uo = 0\n",
-    "# - Com variância estimada igual a variancia amostral\n",
+    "# - Supondo uma população com do = 0\n",
     "\n",
     "# Quando o tamanho da amostra é grande, o Teorema Central do Limite permite aproximar a distribuição da média amostral por uma normal.\n",
     "# No entanto, como a variância populacional é desconhecida, usamos a variância amostral como estimativa.\n",
     "# Isso introduz variabilidade adicional na estatística de teste, razão pela qual usamos a distribuição t de Student em vez da normal padrão.\n",
     "\n",
-    "# u0\n",
-    "uo = 0\n",
-    "print(f\"uo = {np.round(uo, 2)}\")\n",
+    "# d0\n",
+    "do = 0\n",
+    "print(f\"do = {np.round(do, 2)}\")\n",
     "\n",
     "# Erro Padrão\n",
     "SE = np.sqrt((s**2)/n)\n",
     "print(f\"SE = {np.round(SE, 2)}\")\n",
     "\n",
     "# Obtenção do t_obs\n",
-    "t_obs = (diff_x_obs - uo)/SE\n",
+    "t_obs = (diff_x_obs - do)/SE\n",
     "print(f\"t_obs = {np.round(t_obs, 2)}\")\n",
     "\n",
     "# Calculando p_value (probabilidade do acaso gerar um valor tão extremo quanto o observado)\n",
@@ -2875,7 +2873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "estudos",
+   "display_name": "zurich",
    "language": "python",
    "name": "python3"
   },
@@ -2889,7 +2887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
